[Fix] -> Margin top primary to align with secondary in Full Width/Stretched layout.

--- a/assets/css/unminified/skin-1-rtl.css
+++ b/assets/css/unminified/skin-1-rtl.css
@@ -857,7 +857,7 @@ body {
 
 .ast-page-builder-template .site-content #primary {
   padding: 0;
-  margin: 0;
+  margin: 3em 0 0 0;
 }
 
 .ast-page-builder-template .no-results {
