--- a/sass/site/layout/_layout-skin-1.scss
+++ b/sass/site/layout/_layout-skin-1.scss
@@ -159,8 +159,8 @@ body{
 		}
 	}
 	.site-content #primary{
-		padding:0;
-		margin:0;
+		padding: 0;
+		margin: 3em 0 0 0;
 	}
 	.no-results {
 	    text-align: center;
